app/src/main/java/com/example/mechfinder/Login.java
package com.example.mechfinder;

import androidx.appcompat.app.AppCompatActivity;

import android.content.Intent;
import android.content.SharedPreferences;
import android.os.Bundle;
import android.preference.PreferenceManager;
import android.view.View;
import android.widget.Button;
import android.widget.EditText;
import android.widget.TextView;
import android.widget.Toast;

import com.android.volley.DefaultRetryPolicy;
import com.android.volley.Request;
import com.android.volley.RequestQueue;
import com.android.volley.Response;
import com.android.volley.VolleyError;
import com.android.volley.toolbox.StringRequest;
import com.android.volley.toolbox.Volley;

import org.json.JSONArray;
import org.json.JSONObject;

import java.util.HashMap;
import java.util.Map;

public class Login extends AppCompatActivity implements View.OnClickListener {
    EditText username,password;
    TextView forgot_password,singup;
    Button login;
    SharedPreferences sh;
    String url="";


    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_login);
        username=(EditText)findViewById(R.id.name);
        password=(EditText)findViewById(R.id.password);
        login=(Button)findViewById(R.id.login);
        forgot_password=(TextView)findViewById(R.id.forgot_password);
        singup=(TextView)findViewById(R.id.singup);




        login.setOnClickListener(this);
        singup.setOnClickListener(this);

        sh = PreferenceManager.getDefaultSharedPreferences(getApplicationContext());
        url=sh.getString("url","")+"and_login";
    }

    @Override
    public void onClick(View v) {


        String userName=username.getText().toString();
        String Password=password.getText().toString();
    if(login==v){
        RequestQueue requestQueue = Volley.newRequestQueue(getApplicationContext());
        StringRequest postRequest = new StringRequest(Request.Method.POST, url,
                new Response.Listener<String>() {
                    @Override
                    public void onResponse(String response) {
                        //  Toast.makeText(getApplicationContext(), response, Toast.LENGTH_LONG).show();

                        // response
                        try {
                            JSONObject jsonObj = new JSONObject(response);
                            String status=jsonObj.getString("status");
                            if(status.equalsIgnoreCase("valid")){
                                String lid=jsonObj.getString("lid");

                                SharedPreferences.Editor edt=sh.edit();
                                edt.putString("lid",lid);
                                edt.commit();

                                Intent in=new Intent(getApplicationContext(),home.class);
                                startActivity(in);
                                Intent in2=new Intent(getApplicationContext(),LocationService.class);
                                startService(in2);
                                String aaa=LocationService.lati;
//                                Toast.makeText(getApplicationContext(), "lati="+aaa, Toast.LENGTH_LONG).show();



                            }
                            else{
                                Toast.makeText(Login.this, "Invalid username or password", Toast.LENGTH_SHORT).show();
                            }


                        }    catch (Exception e) {
                            Toast.makeText(getApplicationContext(), "Error" + e.getMessage().toString(), Toast.LENGTH_SHORT).show();
                        }
                    }
                },
                new Response.ErrorListener() {
                    @Override
                    public void onErrorResponse(VolleyError error) {
                        // error
                        Toast.makeText(getApplicationContext(), "eeeee" + error.toString(), Toast.LENGTH_SHORT).show();
                    }
                }
        ) {
            @Override
            protected Map<String, String> getParams() {

                Map<String, String> params = new HashMap<>();

                params.put("username",userName);
                params.put("password",Password);

                return params;
            }
        };

        int MY_SOCKET_TIMEOUT_MS=100000;

        postRequest.setRetryPolicy(new DefaultRetryPolicy(
                MY_SOCKET_TIMEOUT_MS,
                DefaultRetryPolicy.DEFAULT_MAX_RETRIES,
                DefaultRetryPolicy.DEFAULT_BACKOFF_MULT));
        requestQueue.add(postRequest);

    }
    else if (singup==v){
            Intent in = new Intent(getApplicationContext(), registration.class);
            startActivity(in);
            Toast.makeText(this, "profile personal", Toast.LENGTH_SHORT).show();
        }



    }
}